# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
assets/: combo.pcapng  dhcp.pcap  dhcp.pcapng  dns.pcapng
dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohje.md  overview.d2  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md
src/: bootp_opcode.py  config.py  database.py  dhcp_message_type.py  dns_dir.py  dns_opcode.py  dns_qtype.py  layer.py  layer_config.py  layer_type.py  main.py  packet.py  utils.py
src/analyzer/: base_analyzer.py  dhcp_analyzer.py  dns_analyzer.py
src/components/: enum_property.py  layer.py  packet.py
src/layers/: arp.py  dhcp.py  dns.py  ethernet.py  icmp.py  ip.py  layer_config.py  layer_level.py  layers.py  properties.py  raw.py  sll.py  tcp.py  udp.py
src/layers/properties/: arp_opcode.py  bootp_opcode.py  cooked_packet_type.py  dhcp_message_type.py  dns_dir.py  dns_opcode.py  dns_qtype.py  dns_rcode.py  hardware_type.py  icmp_code.py  icmp_version.py  icmpv6_code.py  ip_version.py
src/packet_parser/: dhcp_parser.py  dns_parser.py  parsers.py  pcap_parser.py
src/parser/: dhcp_parser.py  dns_parser.py  pcap_parser.py
src/properties/: layer_level.py  layer_type.py
src/storage/: database.py  storage.py
src/tests/: test_db.py  test_dhcp.py  test_dns.py  test_overview.py  test_packet.py  test_protocols.py
src/ui/: figure_config.py  ui.py
src/utils/: utils.py
