[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Ville Salmela <villesalmela@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scapy = "^2.5.0"
invoke = "^2.2.0"
matplotlib = "^3.8.4"
tldextract = "^5.1.2"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
pylint = "^3.1.0"
autopep8 = "^2.1.0"
docformatter = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.docformatter]
recursive = true
in-place = true
wrap-summaries = 100
wrap-descriptions = 100
force-wrap = true

[tool.autopep8]
max_line_length = 100
in-place = true
recursive = true
aggressive = 3

[tool.coverage.run]
branch = true
command_line = "-m pytest src/tests"
source = ["src"]
omit = [
    "src/**/__init__.py",
    "src/tests/**",
    "src/ui/**",
    ]